# pg_example

./: Cargo.toml  README.md  rustfmt.toml
src/: db.rs  errors.rs  lib.rs  log.rs  main.rs  models.rs
src/sql/: create_db.sh  create_db_and_user.sql  db.sql
tests/: lib.rs  test_db.rs
