[package]
name = "pg_example"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
autotests = false


[dependencies]
assert_matches = "1.3.0"
chrono = "0.4"
fake = "1.2.2"
postgres = { version = "0.15.1", features = ["with-chrono", "with-uuid"] } 
postgres_range = { version = "0.9.0", features = ["with-chrono"] }
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
rand = "0.5.5"
slog = "2.3.3"
slog-async = "2.3.0"
slog-term = "2.4.0"
uuid = { version = "0.5", features = ["v4"] }


[[test]]
name = "integration_tests"
path = "tests/lib.rs"

